# decoders-review

./: .gitignore  README.md  STATUS.md  STATUS.tex  config.yaml  pyproject.toml
.github/workflows/: update.yml
data/: state.db
data/digests/: 2026-W08.md  2026-W09.md  2026-W10.md  2026-W11.md  2026-W12.md  2026-W13.md  2026-W14.md  2026-W15.md  2026-W16.md  2026-W17.md  2026-W18.md  2026-W19.md  2026-W20.md  2026-W21.md  2026-W22.md  2026-W23.md  2026-W24.md
data/indexes/: index.csv  index.json
data/papers/0712.2888/: changelog.md  extraction.json  metadata.json
data/papers/0712.4115/: bibtex.bib  changelog.md  extraction.json  metadata.json  summary.md
data/papers/1008.4747/: bibtex.bib  changelog.md  extraction.json
data/papers/1108.0679/: changelog.md  extraction.json
data/papers/1202.0357/: bibtex.bib  changelog.md
data/papers/1202.3338/: changelog.md  metadata.json
data/papers/1204.4223/: changelog.md  extraction.json  metadata.json
data/papers/1207.0732/: bibtex.bib  changelog.md  metadata.json
data/papers/1311.7688/: changelog.md  extraction.json  (+1 more)
data/reports/: decoder_report.csv  decoder_report.md
qldpcwatch/: __init__.py  __main__.py  arxiv.py  bibtex.py  cli.py  config.py  diffing.py  digest.py  extraction.py  indexer.py  io_utils.py  models.py  paths.py  pdf_text.py  repo_layout.py  reporting.py  schema.py  search.py  site_builder.py  state.py  summary.py  updater.py
scripts/: run_update.sh
site/: index.html  papers.json
tests/: test_arxiv_query_parsing.py  test_reporting.py  test_schema_validation.py  test_state_db.py
(+944 files in other folders)
